Applied lots of classpath diffs
git-svn-id: svn+ssh://svn.code.sf.net/p/jnode/svn/trunk@676 407389f7-7c16-0410-9eee-ad85acb55d7f