@@ -1,5 +1,6 @@
 /* DatagramSocket.java -- A class to model UDP sockets
-   Copyright (C) 1998, 1999, 2000, 2002 Free Software Foundation, Inc.
+   Copyright (C) 1998, 1999, 2000, 2002, 2003, 2004
+   Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -37,15 +38,21 @@ exception statement from your version. */
 
 package java.net;
 
+import gnu.java.net.PlainDatagramSocketImpl;
+import gnu.java.nio.DatagramChannelImpl;
+import gnu.java.security.action.GetPropertyAction;
+
 import java.io.IOException;
 import java.nio.channels.DatagramChannel;
+import java.nio.channels.IllegalBlockingModeException;
+import java.security.AccessController;
+
 
 /**
  * Written using on-line Java Platform 1.2 API Specification, as well
  * as "The Java Class Libraries", 2nd edition (Addison-Wesley, 1998).
  * Status:  Believed complete and correct.
  */
-
 /**
  * This class models a connectionless datagram socket that sends 
  * individual packets of data across the network.  In the TCP/IP world,
@@ -55,34 +62,25 @@ import java.nio.channels.DatagramChannel;
  * 
  * @author Aaron M. Renn (arenn@urbanophile.com)
  * @author Warren Levy (warrenl@cygnus.com)
- * @author E.W. Prangsma (connection to JNode)
- * 
  * @date May 3, 1999.
  */
-
-public class DatagramSocket {
+public class DatagramSocket
+{
 	/**
 	 * This is the user DatagramSocketImplFactory for this class.  If this
 	 * variable is null, a default factory is used.
 	 */
-	static DatagramSocketImplFactory factory;
-	static DatagramSocketImplFactory systemFactory;
+  private static DatagramSocketImplFactory factory;
 
 	/**
 	 * This is the implementation object used by this socket.
 	 */
-	final DatagramSocketImpl impl;
+  private DatagramSocketImpl impl;
 
 	/**
-	 * The unique DatagramChannel object associated with this datagram socket,
-	 * or null.
+   * True if socket implementation was created.
 	 */
-	DatagramChannel ch;
-
-	/**
-	 * This is the local address which cannot be changed
-	 */
-	private InetAddress local_addr;
+  private boolean implCreated;
 
 	/**
 	 * This is the address we are "connected" to
@@ -95,9 +93,28 @@ public class DatagramSocket {
 	private int remotePort = -1;
 
 	/**
-	 * Is this a "connected" datagram socket?
+   * True if socket is bound.
 	 */
-	private boolean connected = false;
+  private boolean bound;
+
+  /**
+   * Creates a <code>DatagramSocket</code> from a specified
+   * <code>DatagramSocketImpl</code> instance
+   *
+   * @param impl The <code>DatagramSocketImpl</code> the socket will be
+   * created from
+   *
+   * @since 1.4
+   */
+  protected DatagramSocket(DatagramSocketImpl impl)
+  {
+    if (impl == null)
+      throw new NullPointerException("impl may not be null");
+
+    this.impl = impl;
+    this.remoteAddress = null;
+    this.remotePort = -1;
+  }
 
 	/**
 	 * Initializes a new instance of <code>DatagramSocket</code> that binds to 
@@ -105,10 +122,11 @@ public class DatagramSocket {
 	 *
 	 * @exception SocketException If an error occurs.
 	 * @exception SecurityException If a security manager exists and
-	 * its checkListen method doesn't allow the operation.
+   * its <code>checkListen</code> method doesn't allow the operation.
 	 */
-	public DatagramSocket() throws SocketException {
-		this(0, null);
+  public DatagramSocket() throws SocketException
+  {
+    this(new InetSocketAddress(0));
 	}
 
 	/**
@@ -118,11 +136,12 @@ public class DatagramSocket {
 	 * @param port The local port number to bind to.
 	 *
 	 * @exception SecurityException If a security manager exists and its
-	 * checkListen method doesn't allow the operation.
+   * <code>checkListen</code> method doesn't allow the operation.
 	 * @exception SocketException If an error occurs.
 	 */
-	public DatagramSocket(int port) throws SocketException {
-		this(port, null);
+  public DatagramSocket(int port) throws SocketException
+  {
+    this(new InetSocketAddress(port));
 	}
 
 	/**
@@ -130,60 +149,108 @@ public class DatagramSocket {
 	 * the specified local port and address.
 	 *
 	 * @param port The local port number to bind to.
-	 * @param laddr The local address to bind to.
+   * @param addr The local address to bind to.
 	 *
 	 * @exception SecurityException If a security manager exists and its
 	 * checkListen method doesn't allow the operation.
 	 * @exception SocketException If an error occurs.
 	 */
-	public DatagramSocket(int port, InetAddress laddr) throws SocketException {
-		this(
-			new InetSocketAddress(
-				laddr != null ? laddr : InetAddress.ANY_IF,
-				port));
+  public DatagramSocket(int port, InetAddress addr) throws SocketException
+  {
+    this(new InetSocketAddress(addr, port));
 	}
 
 	/**
 	 * Initializes a new instance of <code>DatagramSocket</code> that binds to 
 	 * the specified local port and address.
 	 *
-	 * @param port The local port number to bind to.
-	 * @param laddr The local address to bind to.
+   * @param address The local address and port number to bind to.
 	 *
 	 * @exception SecurityException If a security manager exists and its
-	 * checkListen method doesn't allow the operation.
+   * <code>checkListen</code> method doesn't allow the operation.
 	 * @exception SocketException If an error occurs.
 	 * 
 	 * @since 1.4
 	 */
-	public DatagramSocket(SocketAddress address) throws SocketException {
-		InetSocketAddress tmp = (InetSocketAddress)address;
+  public DatagramSocket(SocketAddress address) throws SocketException
+  {
+      // @classpath-bugfix Security
+    String propVal = (String)AccessController.doPrivileged(new GetPropertyAction("impl.prefix"));
+    if (factory != null) {
+        // @classpath-bugfix Use factory
+        impl = factory.createDatagramSocketImpl();
+    } else if (propVal == null || propVal.equals(""))
+      impl = new PlainDatagramSocketImpl();
+    else
+      try
+        {
+	  impl =
+	    (DatagramSocketImpl) Class.forName("java.net." + propVal
+	                                       + "DatagramSocketImpl")
+	                              .newInstance();
+        }
+      catch (Exception e)
+        {
+	  System.err.println("Could not instantiate class: java.net."
+	                     + propVal + "DatagramSocketImpl");
+	  impl = new PlainDatagramSocketImpl();
+        }
 
-		SecurityManager s = System.getSecurityManager();
-		if (s != null) {
-			s.checkListen(tmp.getPort());
+    if (address != null)
+      bind(address);
+  }
+
+  // This needs to be accessible from java.net.MulticastSocket
+  DatagramSocketImpl getImpl() throws SocketException
+  {
+    try
+      {
+	if (! implCreated)
+	  {
+	    impl.create();
+	    implCreated = true;
 		}
 
-		if (factory != null) {
-			impl = factory.createDatagramSocketImpl();
-		} else if (systemFactory != null) {
-			impl = systemFactory.createDatagramSocketImpl();
-		} else {
-			throw new SocketException("No DatagramSocketFactory set");
+	return impl;
 		}
-		impl.create();
-
-		if (address != null) {
-			local_addr = tmp.getAddress();
-			impl.bind(tmp.getPort(), tmp.getAddress());
+    catch (IOException e)
+      {
+	throw new SocketException(e.getMessage());
 		}
 	}
 
 	/**
 	 * Closes this datagram socket.
 	 */
-	public void close() {
-		impl.close();
+  public void close()
+  {
+    if (isClosed())
+      return;
+
+    try
+      {
+	getImpl().close();
+      }
+    catch (SocketException e)
+      {
+	// Ignore this case, just close the socket in finally clause.
+      }
+    finally
+      {
+	remoteAddress = null;
+	remotePort = -1;
+	impl = null;
+      }
+
+    try
+      {
+	if (getChannel() != null)
+	  getChannel().close();
+      }
+    catch (IOException e)
+      {
+	// Do nothing.
+      }
 	}
 
 	/**
@@ -195,7 +262,8 @@ public class DatagramSocket {
 	 *
 	 * @since 1.2
 	 */
-	public InetAddress getInetAddress() {
+  public InetAddress getInetAddress()
+  {
 		return remoteAddress;
 	}
 
@@ -208,29 +276,45 @@ public class DatagramSocket {
 	 *
 	 * @since 1.2
 	 */
-	public int getPort() {
+  public int getPort()
+  {
 		return remotePort;
 	}
 
 	/**
 	 * Returns the local address this datagram socket is bound to.
 	 * 
+   * @return The local address is the socket is bound or null
+   *
 	 * @since 1.1
 	 */
-	public InetAddress getLocalAddress() {
-		if (impl == null)
+  public InetAddress getLocalAddress()
+  {
+    if (! isBound())
 			return null;
 
-		// FIXME: According to libgcj, checkConnect() is supposed to be called
-		// before performing this operation.  Problems: 1) We don't have the
-		// addr until after we do it, so we do a post check.  2). The docs I
-		// see don't require this in the Socket case, only DatagramSocket, but
-		// we'll assume they mean both.
-		SecurityManager sm = System.getSecurityManager();
-		if (sm != null)
-			sm.checkConnect(local_addr.getHostName(), getLocalPort());
+    InetAddress localAddr;
 
-		return local_addr;
+    try
+      {
+	localAddr =
+	  (InetAddress) getImpl().getOption(SocketOptions.SO_BINDADDR);
+
+	SecurityManager s = System.getSecurityManager();
+	if (s != null)
+	  s.checkConnect(localAddr.getHostName(), -1);
+      }
+    catch (SecurityException e)
+      {
+	localAddr = InetAddress.ANY_IF;
+      }
+    catch (SocketException e)
+      {
+	// This cannot happen as we are bound.
+	return null;
+      }
+
+    return localAddr;
 	}
 
 	/**
@@ -238,8 +322,20 @@ public class DatagramSocket {
 	 *
 	 * @return The local port number.
 	 */
-	public int getLocalPort() {
-		return impl.getLocalPort();
+  public int getLocalPort()
+  {
+    if (isClosed())
+      return -1;
+
+    try
+      {
+	return getImpl().getLocalPort();
+      }
+    catch (SocketException e)
+      {
+	// This cannot happen as we are bound.
+	return 0;
+      }
 	}
 
 	/**
@@ -252,16 +348,17 @@ public class DatagramSocket {
 	 * 
 	 * @since 1.1
 	 */
-	public synchronized int getSoTimeout() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public synchronized int getSoTimeout() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object timeout = impl.getOption(SocketOptions.SO_TIMEOUT);
+    Object buf = getImpl().getOption(SocketOptions.SO_TIMEOUT);
 
-		if (timeout instanceof Integer)
-			return ((Integer)timeout).intValue();
-		else
-			throw new SocketException("Internal Error");
+    if (buf instanceof Integer)
+      return ((Integer) buf).intValue();
+
+    throw new SocketException("unexpected type");
 	}
 
 	/**
@@ -275,11 +372,15 @@ public class DatagramSocket {
 	 *
 	 * @since 1.1
 	 */
-	public void setSoTimeout(int timeout) throws SocketException {
-		if (timeout < 0)
-			throw new IllegalArgumentException("Timeout value is less than 0");
+  public synchronized void setSoTimeout(int timeout) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		impl.setOption(SocketOptions.SO_TIMEOUT, new Integer(timeout));
+		if (timeout < 0)
+      throw new IllegalArgumentException("Invalid timeout: " + timeout);
+
+    getImpl().setOption(SocketOptions.SO_TIMEOUT, new Integer(timeout));
 	}
 
 	/**
@@ -293,16 +394,17 @@ public class DatagramSocket {
 	 *
 	 * @since 1.2
 	 */
-	public int getSendBufferSize() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public int getSendBufferSize() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object obj = impl.getOption(SocketOptions.SO_SNDBUF);
+    Object buf = getImpl().getOption(SocketOptions.SO_SNDBUF);
 
-		if ((obj != null) && (obj instanceof Integer))
-			return (((Integer)obj).intValue());
-		else
-			throw new SocketException("Unexpected type");
+    if (buf instanceof Integer)
+      return ((Integer) buf).intValue();
+
+    throw new SocketException("unexpected type");
 	}
 
 	/**
@@ -317,11 +419,15 @@ public class DatagramSocket {
 	 *
 	 * @since 1.2
 	 */
-	public void setSendBufferSize(int size) throws SocketException {
+  public void setSendBufferSize(int size) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
+
 		if (size < 0)
 			throw new IllegalArgumentException("Buffer size is less than 0");
 
-		impl.setOption(SocketOptions.SO_SNDBUF, new Integer(size));
+    getImpl().setOption(SocketOptions.SO_SNDBUF, new Integer(size));
 	}
 
 	/**
@@ -335,16 +441,17 @@ public class DatagramSocket {
 	 *
 	 * @since 1.2
 	 */
-	public int getReceiveBufferSize() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public int getReceiveBufferSize() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object obj = impl.getOption(SocketOptions.SO_RCVBUF);
+    Object buf = getImpl().getOption(SocketOptions.SO_RCVBUF);
 
-		if (obj instanceof Integer)
-			return (((Integer)obj).intValue());
-		else
-			throw new SocketException("Unexpected type");
+    if (buf instanceof Integer)
+      return ((Integer) buf).intValue();
+
+    throw new SocketException("unexpected type");
 	}
 
 	/**
@@ -359,62 +466,82 @@ public class DatagramSocket {
 	 *  
 	 * @since 1.2
 	 */
-	public void setReceiveBufferSize(int size) throws SocketException {
+  public void setReceiveBufferSize(int size) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
+
 		if (size < 0)
 			throw new IllegalArgumentException("Buffer size is less than 0");
 
-		impl.setOption(SocketOptions.SO_RCVBUF, new Integer(size));
+    getImpl().setOption(SocketOptions.SO_RCVBUF, new Integer(size));
 	}
 
 	/**
 	 * This method connects this socket to the specified address and port.
 	 * When a datagram socket is connected, it will only send or receive
-	 * packate to and from the host to which it is connected.  A multicast
+   * packets to and from the host to which it is connected. A multicast
 	 * socket that is connected may only send and not receive packets.
 	 *
-	 * @param addr The address to connect this socket to.
+   * @param address The address to connect this socket to.
 	 * @param port The port to connect this socket to.
 	 *
-	 * @exception SecurityException If connections to this addr/port are not
-	 * allowed.
-	 * @exception IllegalArgumentException If the addr or port are invalid.
+   * @exception SocketException If an error occurs.
+   * @exception IllegalArgumentException If address or port are invalid.
+   * @exception SecurityException If the caller is not allowed to send
+   * datagrams to or receive from this address and port.
 	 *
 	 * @since 1.2
 	 */
-	public void connect(InetAddress addr, int port)
-		throws SecurityException, IllegalArgumentException {
-		if (addr == null)
-			throw new IllegalArgumentException("Connect address is null");
+  public void connect(InetAddress address, int port)
+  {
+    if (address == null)
+      throw new IllegalArgumentException("Connect address may not be null");
 
 		if ((port < 1) || (port > 65535))
-			throw new IllegalArgumentException("Bad port number: " + port);
+      throw new IllegalArgumentException("Port number is illegal: " + port);
 
 		SecurityManager sm = System.getSecurityManager();
 		if (sm != null)
-			sm.checkConnect(addr.getHostName(), port);
+      sm.checkConnect(address.getHostName(), port);
 
-		this.remoteAddress = addr;
-		this.remotePort = port;
-
-		/* FIXME: Shit, we can't do this even though the OS supports it since this 
-		   method isn't in DatagramSocketImpl. */
-		//  impl.connect(addr, port);
-
-		connected = true;
+    try
+      {
+	getImpl().connect(address, port);
+	remoteAddress = address;
+	remotePort = port;
+      }
+    catch (SocketException e)
+      {
+	// This means simply not connected or connect not implemented.
+      }
 	}
 
 	/**
-	 * This method disconnects this socket from the addr/port it was 
+   * This method disconnects this socket from the address/port it was
 	 * connected to.  If the socket was not connected in the first place,
 	 * this method does nothing.
 	 *
 	 * @since 1.2
 	 */
-	public void disconnect() {
-		// FIXME: See my comments on connect()
-		this.remoteAddress = null;
-		this.remotePort = -1;
-		connected = false;
+  public void disconnect()
+  {
+    if (! isConnected())
+      return;
+
+    try
+      {
+	getImpl().disconnect();
+      }
+    catch (SocketException e)
+      {
+	// This cannot happen as we are connected.
+      }
+    finally
+      {
+	remoteAddress = null;
+	remotePort = -1;
+      }
 	}
 
 	/**
@@ -425,10 +552,31 @@ public class DatagramSocket {
 	 *
 	 * @param p A <code>DatagramPacket</code> for storing the data
 	 *
-	 * @exception IOException If an error occurs
+   * @exception IOException If an error occurs.
+   * @exception SocketTimeoutException If setSoTimeout was previously called
+   * and the timeout has expired.
+   * @exception PortUnreachableException If the socket is connected to a
+   * currently unreachable destination. Note, there is no guarantee that the
+   * exception will be thrown.
+   * @exception IllegalBlockingModeException If this socket has an associated
+   * channel, and the channel is in non-blocking mode.
+   * @exception SecurityException If a security manager exists and its
+   * checkAccept ethod doesn't allow the receive.
 	 */
-	public synchronized void receive(DatagramPacket p) throws IOException {
-		impl.receive(p);
+  public synchronized void receive(DatagramPacket p) throws IOException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
+
+    if (remoteAddress != null && remoteAddress.isMulticastAddress())
+      throw new IOException
+	("Socket connected to a multicast address my not receive");
+
+    if (getChannel() != null && ! getChannel().isBlocking()
+        && ! ((DatagramChannelImpl) getChannel()).isInChannelOperation())
+      throw new IllegalBlockingModeException();
+
+    getImpl().receive(p);
 
 		SecurityManager s = System.getSecurityManager();
 		if (s != null && isConnected())
@@ -450,27 +598,37 @@ public class DatagramSocket {
 	 * @exception IllegalBlockingModeException If this socket has an associated
 	 * channel, and the channel is in non-blocking mode.
 	 */
-	public void send(DatagramPacket p) throws IOException {
-		if (!connected) {
+  public void send(DatagramPacket p) throws IOException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
+
+    // JDK1.2: Don't do security checks if socket is connected; see jdk1.2 api.
 			SecurityManager s = System.getSecurityManager();
-			if (s != null) {
+    if (s != null && ! isConnected())
+      {
 				InetAddress addr = p.getAddress();
 				if (addr.isMulticastAddress())
 					s.checkMulticast(addr);
 				else
 					s.checkConnect(addr.getHostAddress(), p.getPort());
 			}
-		} else {
-			if (!p.getAddress().equals(remoteAddress)) {
-				throw new SecurityException("Can only send to the connected remote address");
-			}
-			if (p.getPort() != remotePort) {
-				throw new SecurityException("Can only send to the connected remote port");
-			}
+
+    if (isConnected())
+      {
+	if (p.getAddress() != null
+	    && (remoteAddress != p.getAddress() || remotePort != p.getPort()))
+	  throw new IllegalArgumentException
+	    ("DatagramPacket address does not match remote address");
 		}
 
-		// FIXME: if this is a subclass of MulticastSocket, use getTTL for TTL val.
-		impl.send(p);
+    // FIXME: if this is a subclass of MulticastSocket,
+    // use getTimeToLive for TTL val.
+    if (getChannel() != null && ! getChannel().isBlocking()
+        && ! ((DatagramChannelImpl) getChannel()).isInChannelOperation())
+      throw new IllegalBlockingModeException();
+
+    getImpl().send(p);
 	}
 
 	/**
@@ -485,26 +643,71 @@ public class DatagramSocket {
 	 *
 	 * @since 1.4
 	 */
-	public void bind(SocketAddress address) throws SocketException {
-		if (!(address instanceof InetSocketAddress))
-			throw new IllegalArgumentException();
+  public void bind(SocketAddress address) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		InetSocketAddress tmp = (InetSocketAddress)address;
+    if (! (address instanceof InetSocketAddress))
+      throw new IllegalArgumentException("unsupported address type");
+
+    InetAddress addr = ((InetSocketAddress) address).getAddress();
+    int port = ((InetSocketAddress) address).getPort();
+
+    if (port < 0 || port > 65535)
+      throw new IllegalArgumentException("Invalid port: " + port);
 
 		SecurityManager s = System.getSecurityManager();
 		if (s != null)
-			s.checkListen(tmp.getPort());
+      s.checkListen(port);
 
-		impl.bind(tmp.getPort(), tmp.getAddress());
+    if (addr == null)
+      addr = InetAddress.ANY_IF;
+
+    try
+      {
+	getImpl().bind(port, addr);
+	bound = true;
+      }
+    catch (SocketException exception)
+      {
+	getImpl().close();
+	throw exception;
+      }
+    catch (RuntimeException exception)
+      {
+	getImpl().close();
+	throw exception;
+      }
+    catch (Error error)
+      {
+	getImpl().close();
+	throw error;
+      }
+  }
+
+  /**
+   * Checks if the datagram socket is closed.
+   *
+   * @return True if socket is closed, false otherwise.
+   *
+   * @since 1.4
+   */
+  public boolean isClosed()
+  {
+    return impl == null;
 	}
 
 	/**
 	 * Returns the datagram channel assoziated with this datagram socket.
 	 * 
+   * @return The associated <code>DatagramChannel</code> object or null
+   *
 	 * @since 1.4
 	 */
-	public DatagramChannel getChannel() {
-		return ch;
+  public DatagramChannel getChannel()
+  {
+    return null;
 	}
 
 	/**
@@ -517,35 +720,39 @@ public class DatagramSocket {
 	 *
 	 * @since 1.4
 	 */
-	public void connect(SocketAddress address) throws SocketException {
-		if (!(address instanceof InetSocketAddress))
-			throw new IllegalArgumentException("SocketAddress is not InetSocketAddress");
+  public void connect(SocketAddress address) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		InetSocketAddress tmp = (InetSocketAddress)address;
+    if (! (address instanceof InetSocketAddress))
+      throw new IllegalArgumentException("unsupported address type");
+
+    InetSocketAddress tmp = (InetSocketAddress) address;
 		connect(tmp.getAddress(), tmp.getPort());
 	}
 
 	/**
 	 * Returns the binding state of the socket.
 	 * 
+   * @return True if socket bound, false otherwise.
+   *
 	 * @since 1.4
 	 */
-	public boolean isBound() {
-		try {
-			Object bindaddr = impl.getOption(SocketOptions.SO_BINDADDR);
-		} catch (SocketException e) {
-			return false;
-		}
-
-		return true;
+  public boolean isBound()
+  {
+    return bound;
 	}
 
 	/**
 	 * Returns the connection state of the socket.
 	 * 
+   * @return True if socket is connected, false otherwise.
+   *
 	 * @since 1.4
 	 */
-	public boolean isConnected() {
+  public boolean isConnected()
+  {
 		return remoteAddress != null;
 	}
 
@@ -553,31 +760,31 @@ public class DatagramSocket {
 	 * Returns the SocketAddress of the host this socket is conneted to
 	 * or null if this socket is not connected.
 	 * 
+   * @return The socket address of the remote host if connected or null
+   *
 	 * @since 1.4
 	 */
-	public SocketAddress getRemoteSocketAddress() {
-		if (!isConnected())
+  public SocketAddress getRemoteSocketAddress()
+  {
+    if (! isConnected())
 			return null;
 
 		return new InetSocketAddress(remoteAddress, remotePort);
 	}
 
 	/**
-	 * Returns the local SocketAddress this socket is bound to
-	 * or null if it is not bound.
+   * Returns the local SocketAddress this socket is bound to.
+   *
+   * @return The local SocketAddress or null if the socket is not bound.
 	 * 
 	 * @since 1.4
 	 */
-	public SocketAddress getLocalSocketAddress() {
-		InetAddress addr;
-
-		try {
-			addr = (InetAddress)impl.getOption(SocketOptions.SO_BINDADDR);
-		} catch (SocketException e) {
+  public SocketAddress getLocalSocketAddress()
+  {
+    if (! isBound())
 			return null;
-		}
 
-		return new InetSocketAddress(local_addr, impl.localPort);
+    return new InetSocketAddress(getLocalAddress(), getLocalPort());
 	}
 
 	/**
@@ -589,65 +796,73 @@ public class DatagramSocket {
 	 *
 	 * @since 1.4
 	 */
-	public void setReuseAddress(boolean on) throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public void setReuseAddress(boolean on) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		impl.setOption(SocketOptions.SO_REUSEADDR, new Boolean(on));
+    getImpl().setOption(SocketOptions.SO_REUSEADDR, Boolean.valueOf(on));
 	}
 
 	/**
 	 * Checks if SO_REUSEADDR is enabled.
 	 *
+   * @return True if SO_REUSEADDR is set on the socket, false otherwise.
+   *
 	 * @exception SocketException If an error occurs.
 	 * 
 	 * @since 1.4
 	 */
-	public boolean getReuseAddress() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public boolean getReuseAddress() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object obj = impl.getOption(SocketOptions.SO_REUSEADDR);
+    Object buf = getImpl().getOption(SocketOptions.SO_REUSEADDR);
 
-		if (obj instanceof Boolean)
-			return (((Boolean)obj).booleanValue());
-		else
-			throw new SocketException("Unexpected type");
+    if (buf instanceof Boolean)
+      return ((Boolean) buf).booleanValue();
+
+    throw new SocketException("unexpected type");
 	}
 
 	/**
 	 * Enables/Disables SO_BROADCAST
 	 * 
-	 * @param on Whether or not to have SO_BROADCAST turned on
+   * @param enable True if SO_BROADCAST should be enabled, false otherwise.
 	 *
 	 * @exception SocketException If an error occurs
 	 *
 	 * @since 1.4
 	 */
-	public void setBroadcast(boolean on) throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public void setBroadcast(boolean enable) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		impl.setOption(SocketOptions.SO_BROADCAST, new Boolean(on));
+    getImpl().setOption(SocketOptions.SO_BROADCAST, Boolean.valueOf(enable));
 	}
 
 	/**
 	 * Checks if SO_BROADCAST is enabled
 	 * 
+   * @return Whether SO_BROADCAST is set
+   *
 	 * @exception SocketException If an error occurs
 	 * 
 	 * @since 1.4
 	 */
-	public boolean getBroadcast() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public boolean getBroadcast() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object obj = impl.getOption(SocketOptions.SO_BROADCAST);
+    Object buf = getImpl().getOption(SocketOptions.SO_BROADCAST);
 
-		if (obj instanceof Boolean)
-			return ((Boolean)obj).booleanValue();
-		else
-			throw new SocketException("Unexpected type");
+    if (buf instanceof Boolean)
+      return ((Boolean) buf).booleanValue();
+
+    throw new SocketException("unexpected type");
 	}
 
 	/**
@@ -658,39 +873,43 @@ public class DatagramSocket {
 	 * @exception SocketException If an error occurs
 	 * @exception IllegalArgumentException If tc value is illegal
 	 *
-	 * @see DatagramSocket:getTrafficClass
+   * @see DatagramSocket#getTrafficClass()
 	 * 
 	 * @since 1.4
 	 */
-	public void setTrafficClass(int tc) throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public void setTrafficClass(int tc) throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
 		if (tc < 0 || tc > 255)
 			throw new IllegalArgumentException();
 
-		impl.setOption(SocketOptions.IP_TOS, new Integer(tc));
+    getImpl().setOption(SocketOptions.IP_TOS, new Integer(tc));
 	}
 
 	/**
 	 * Returns the current traffic class
 	 * 
-	 * @see DatagramSocket:setTrafficClass
+   * @return The current traffic class.
+   *
+   * @see DatagramSocket#setTrafficClass(int tc)
 	 *
 	 * @exception SocketException If an error occurs
 	 * 
 	 * @since 1.4
 	 */
-	public int getTrafficClass() throws SocketException {
-		if (impl == null)
-			throw new SocketException("Cannot initialize Socket implementation");
+  public int getTrafficClass() throws SocketException
+  {
+    if (isClosed())
+      throw new SocketException("socket is closed");
 
-		Object obj = impl.getOption(SocketOptions.IP_TOS);
+    Object buf = getImpl().getOption(SocketOptions.IP_TOS);
 
-		if (obj instanceof Integer)
-			return ((Integer)obj).intValue();
-		else
-			throw new SocketException("Unexpected type");
+    if (buf instanceof Integer)
+      return ((Integer) buf).intValue();
+
+    throw new SocketException("unexpected type");
 	}
 
 	/**
@@ -704,7 +923,8 @@ public class DatagramSocket {
 	 * checkSetFactory method doesn't allow the operation
 	 */
 	public static void setDatagramSocketImplFactory(DatagramSocketImplFactory fac)
-		throws IOException {
+    throws IOException
+  {
 		if (factory != null)
 			throw new SocketException("DatagramSocketImplFactory already defined");
 
@@ -714,28 +934,4 @@ public class DatagramSocket {
 
 		factory = fac;
 	}
-
-	/**
-	 * Sets the datagram socket implementation factory for the application
-	 *
-	 * @param fac The factory to set
-	 *
-	 * @exception IOException If an error occurs
-	 * @exception SocketException If the factory is already defined
-	 * @exception SecurityException If a security manager exists and its
-	 * checkSetFactory method doesn't allow the operation
-	 */
-	public static void setSystemDatagramSocketImplFactory(DatagramSocketImplFactory fac)
-	throws IOException {
-		if (systemFactory != null) {
-			throw new SocketException("System wide DatagramSocketImplFactory already defined");
-		}
-
-		final SecurityManager sm = System.getSecurityManager();
-		if (sm != null) {
-			sm.checkSetFactory();
-		}
-
-		systemFactory = fac;
-	}
-} // class DatagramSocket
+}
